# ewe_platform

./: '  .dockerignore  .envrc  .gitignore  .gitmodules  .viminspector.json  2026-03-30-003601-i-have-been-thinking-alot-about-this-threadedfutur.txt  2026-04-05-185330-this-session-is-being-continued-from-a-previous-c.txt  2026-04-06-175150-claude-code-v2192.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE_MIT  Makefile  README.md  \  add_tracing_spans.py  bacon.toml  build.logs  cargo.toml  ci-test.Dockerfile  conversation-2026-03-30-003518.txt  conversation-2026-04-01-124444.txt  conversation-2026-04-06-163723.txt  current_progress.txt  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  rust-analyzer.toml  rust-toolchain.toml  test-build.Dockerfile  test.logs  test.out  watch.json  worker-stub.js  wrangler.toml
backends/directorate/: Cargo.toml  README.md
backends/directorate/src/: lib.rs
backends/foundation_ai/: Cargo.toml
backends/foundation_ai/src/: lib.rs
backends/foundation_ai/src/types/: mod.rs
backends/foundation_ai/tests/: candle_backend.rs  huggingface_candle_provider.rs  huggingface_gguf_provider.rs  huggingface_provider.rs  llamacpp_integration.rs  openai_provider.rs  sampler_chain.rs
backends/foundation_auth/: Cargo.toml
backends/foundation_auth/src/: auth_state.rs  auth_token.rs  credential_store.rs  jwt.rs  lib.rs  middleware.rs  oauth.rs  session.rs  two_factor.rs
backends/foundation_codegen/: Cargo.toml
backends/foundation_codegen/src/: cargo_toml.rs  crate_scanner.rs  error.rs  file_walker.rs  lib.rs  module_path.rs  parser.rs  registry.rs  scanner.rs  types.rs  visitor.rs
backends/foundation_codegen/tests/: foundation_codegen_tests.rs
backends/foundation_core/: Cargo.toml  build.rs  sample.txt
backends/foundation_core/src/: lib.rs  tls_verification.rs
backends/foundation_core/tests/: chunked_encoding.rs  chunked_tests.rs  flatten_combinators.rs  http_client_body_reading.rs  http_task_iterator_integration.rs  map_circuit.rs  mod.rs  stream_iterators.rs  sync_boundary_helpers.rs  task_iterators.rs  threaded_future.rs  threaded_future_std.rs  tls_communication.rs  tls_integration.rs  tls_local_server.rs  units.rs
backends/foundation_db/: Cargo.toml  miniflare-test.config.json
backends/foundation_db/src/: cleanup.rs  errors.rs  lib.rs  rows_stream.rs  storage_provider.rs
backends/foundation_db/tests/: blobstore_tests.rs  cleanup_tests.rs  d1_kvstore_tests.rs  json_blobstore_tests.rs  json_file_storage_tests.rs  libsql_storage_tests.rs  memory_storage_tests.rs  r2_blobstore_tests.rs  state_store_tests.rs  store_state_task.rs  turso_storage_tests.rs
backends/foundation_deployment/: Cargo.toml
backends/foundation_deployment/src/: config.rs  error.rs  json_schema.rs  lib.rs  provider_client.rs  resource_info.rs  traits.rs  types.rs
backends/foundation_deployment/tests/: huggingface_integration.rs
backends/foundation_errstacks/: Cargo.toml  README.md
backends/foundation_errstacks/src/: error_trace.rs  frame.rs  lib.rs  result_ext.rs
backends/foundation_errstacks/tests/: mod.rs
backends/foundation_jsmacros/: Cargo.toml
backends/foundation_jsmacros/src/: embedders.rs  lib.rs
backends/foundation_jsnostd/: Cargo.toml
backends/foundation_jsnostd/src/: base.rs  jsapi.rs  jsrom.rs  lib.rs  mem.rs  ops.rs  registry.rs
backends/foundation_logging/: Cargo.toml
backends/foundation_logging/src/: lib.rs
backends/foundation_macros/: Cargo.toml
backends/foundation_macros/src/: collections.rs  embedders.rs  json_hash.rs  lib.rs  wasm_entrypoint.rs
backends/foundation_macros/tests/: json_hash_tests.rs
backends/foundation_nostd/: Cargo.toml  FINAL_REPORT.md  Makefile  SESSION_SUMMARY.md  WASM.md  test_output.txt
backends/foundation_nostd/examples/: comp_usage.rs  cross_platform.rs
backends/foundation_nostd/src/: embeddable.rs  lib.rs  raw_parts.rs  syncs.rs
backends/foundation_nostd/tests/: wasm_tests.rs
backends/foundation_openapi/: Cargo.toml
backends/foundation_openapi/src/: api_catalog.rs  classifier.rs  endpoint.rs  extractor.rs  lib.rs  normalizer.rs  spec.rs  type_resolver.rs
backends/foundation_openapi/tests/: integration_spec_processing.rs
backends/foundation_testing/: Cargo.toml  README.md
backends/foundation_testing/src/: huggingface.rs  lib.rs
backends/foundation_testing/tests/: barrier_debug.rs  integration_tests.rs
backends/foundation_wasm/: Cargo.toml  README.md  build.rs
backends/foundation_wasm/src/: base.rs  error.rs  frames.rs  intervals.rs  jsapi.rs  lib.rs  mem.rs  ops.rs  registry.rs  schedule.rs  wrapped.rs
backends/foundations_ext/: Cargo.toml  README.md
backends/foundations_ext/src/: lib.rs
backends/runtimes/: Cargo.toml
backends/runtimes/src/: lib.rs
backends/serde_ext/: Cargo.toml
backends/serde_ext/src/: errors.rs  json_ext.rs  lib.rs
backends/strings_ext/: Cargo.toml
backends/strings_ext/src/: lib.rs
backends/tokio_ext/: Cargo.toml
backends/wirestreams/: Cargo.toml
backends/wirestreams/src/: lib.rs
crates/channels/: Cargo.toml  README.md
crates/channels/src/: broadcast.rs  channels.rs  executor.rs  lib.rs  mspc.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/devserver/: Cargo.toml  README.md
crates/devserver/src/: assets.rs  bin_app.rs  body.rs  builders.rs  cargo.rs  cargo_ops.rs  core.rs  errors.rs  lib.rs  operators.rs  proxy.rs  reloader.js  sender_ext.rs  streams.rs  tcp_proxy.rs  types.rs  vec_ext.rs  watchers.rs
crates/domain/: Cargo.toml  README.md
crates/domain-macro/: Cargo.toml  README.md
crates/domain/src/: app.rs  core.rs  domains.rs  lib.rs  pending_chan.rs  servicer.rs  testing.rs
tests/: Cargo.toml  mod.rs
tests/backends/: mod.rs  test_macros_embeddeders.rs  tests.rs
tests/backends/foundation_core/: mod.rs
tests/backends/foundation_nostd/: barrier_debug.rs  integration_tests.rs  mod.rs  wasm_tests.rs
tests/integrations/: .gitignore
tests/integrations/tests_callfunction/: Cargo.toml  Makefile  index.node.js  tests_callfunction.d  tests_callfunction.wasm
watchful/: Cargo.toml
(+7104 files in other folders)
