[workspace]
resolver = "3"
# set members of your workspace
members = [
  "bin/*",
  "crates/*",
  "backends/*",
  "demos/*",
  "tests/integrations/*",
  "examples/web/*",
  "examples/template/*",
  "demos/intro",
]
exclude = [
  "crates/html-macro",
  "templates/*",
  "templates/http-app",
  "templates/static-html-app",
  "examples/todo",
  "crates/temple/output_directory",
  "backends/docs",
  "backends/docs/*",
]

[workspace.package]
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
authors = ["EweStudios Consulting Limited"]
repository = "https://github.com/ewe-studios/ewe_platform"
keywords = ["ewe_platform", "ewestudios-platform", "ewestudios_platform"]


[workspace.dependencies]

# -- non 'ewe` namespaced crates
foundation_nostd = { path = "./backends/foundation_nostd", version = "0.0.2" }
foundation_macros = { path = "./backends/foundation_macros", version = "0.0.2" }
foundation_jsnostd = { path = "./backends/foundation_jsnostd", version = "0.0.2" }
foundation_core = { path = "./backends/foundation_core", version = "0.0.3" }
foundation_runtimes = { path = "./backends/runtimes", version = "0.0.1" }

# -- internal packages so others can use them
ewe_web = { path = "./crates/web", version = "0.0.1" }
ewe_trace = { path = "./crates/trace", version = "0.0.1" }
ewe_html = { path = "./crates/html", version = "0.0.1" }
ewe_spawn = { path = "./crates/spawn", version = "0.0.1" }
ewe_temple = { path = "./crates/temple", version = "0.0.2" }
ewe_domain = { path = "./crates/domain", version = "0.0.1" }
ewe_routing = { path = "./crates/routing", version = "0.0.1" }
ewe_platform = { path = "./crates/platform", version = "0.0.1" }
ewe_channels = { path = "./crates/channels", version = "0.0.1" }
ewe_watchers = { path = "./crates/watchers", version = "0.0.1" }
ewe_devserver = { path = "./crates/devserver", version = "0.0.2" }
ewe_templates = { path = "./crates/templates", version = "0.0.1" }
ewe_html_macro = { path = "./crates/html-macro", version = "0.0.1" }
ewe_watch_utils = { path = "./crates/watch_utils", version = "0.0.1" }
ewe_async_utils = { path = "./crates/async-utils", version = "0.0.1" }
ewe_domain_macro = { path = "./crates/domain-macro", version = "0.0.1" }
ewe_templates_macro = { path = "./crates/template-macro", version = "0.0.1" }

# -- workspace wide packages
toml = { version = "0.8.19" }
anyhow = { version = "1.0.80" }
tracing = { version = "0.1.40" }
concurrent-queue = { version = "2.5.0" }
derive_more = { version = ">=2.0", features = ["full"] }

[workspace.lints.clippy]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 0

[profile.release]
lto = true # link time optimizations
# Enable to remove debug info from wasm files
strip = "debuginfo"
