[package]
name = "ewe_platform_tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "mod.rs"

[dependencies]
foundation_nostd = { workspace = true }
foundation_core = { workspace = true }
foundation_testing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

regex = { workspace = true}
tracing = { workspace = true}

[dev-dependencies]
serial_test = { workspace = true }
tracing-test = { version = "0.2.5",  features = ["no-env-filter"] }
reqwest = { version = "0.12.15", features = ["blocking"] }

[features]
std = ["foundation_core/std"]
multi = ["foundation_core/multi"]
alloc = ["foundation_core/alloc"]
default  = ["std"]
