[package]
name = "ewe_platform_tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "mod.rs"

[dependencies]
foundation_nostd = { workspace = true }
foundation_core = { workspace = true }
foundation_testing = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

regex = { workspace = true}
tracing = { workspace = true}
base64 = "0.21"
sha1 = { version = "0.10", features = ["std"] }

[dev-dependencies]
serial_test = { workspace = true }
tracing-test = { version = "0.2.5",  features = ["no-env-filter"] }
reqwest = { version = "0.12.15", features = ["blocking"] }

[features]
std = ["foundation_core/std"]
multi = ["foundation_core/multi"]
alloc = ["foundation_core/alloc"]
gzip = ["foundation_core/gzip"]
deflate = ["foundation_core/gzip"]
brotli = ["foundation_core/compression"]
socks5 = ["foundation_core/socks5"]
ssl-rustls = ["foundation_core/ssl-rustls"]
default  = ["std"]
