[package]
name = "directorate"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]

# files embedding
rust-embed = { version = "8.5"}

[lints]
workspace = true
