[package]
name = "directorate"
description = "A object wrapper of rust_embed that lets you treat your embeded data as a ownerable object type"
version = "0.0.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["Directorate", "rust-embed-wrapper", "directory-embedding"]

[dependencies]

# files embedding
rust-embed = { version = "8.5"}

[lints]
workspace = true
