[package]
name = "foundation_ai"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AI foundation create for the eweplatform"
keywords = ["foundations_ai", "ewe-platform-ai"]

[dependencies]

# -- Workspace dependencies

foundation_nostd = { workspace = true }
foundation_auth = { workspace = true }
foundation_macros = { workspace = true }
foundation_core = { workspace = true }

infrastructure_llama_cpp = { workspace = true }

# -- Other dependencies
regex = { version = "1.10" }
lazy-regex = { version = "3.1" }
derive_more = { version = "2.1", features = ["from", "debug", "error"] }
serde = { version = "1", features = ["derive"] }
fastrand = { version = "2.3"}
rand_chacha = { version = "0.9"}
rand = { version = "0.9"}
chrono = { version = "0.4.44"}

# Tracing for logging
tracing = { workspace = true }

[dev-dependencies]
# Foundation testing with HuggingFace model downloading
foundation_testing = { workspace = true, features = ["huggingface"] }

[features]
# vulkan + Apple Metal
metal = ["infrastructure_llama_cpp/metal"]
vulkan = ["infrastructure_llama_cpp/vulkan"]

# cuda flags
cuda = ["infrastructure_llama_cpp/cuda"]
cuda_static = ["infrastructure_llama_cpp/cuda", "infrastructure_llama_cpp/cuda-no-vmm"]

# Android
android = ["infrastructure_llama_cpp/android-shared-stdcxx"]

# OpenMP
openmp = ["infrastructure_llama_cpp/openmp"]

# MultiModel Model
mtmd = ["infrastructure_llama_cpp/mtmd"]

[lints]
workspace = true
