[package]
name = "foundation_auth"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
foundation_core = { workspace = true }

derive_more = { version = "2.0", features = ["from", "debug", "error"] }
base64 = "0.22"
sha1 = "0.10"
bytes = "1.5"

zeroize = { version = "1" }

[lints]
workspace = true
