[package]
name = "foundation_auth"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
foundation_core = { workspace = true }
foundation_db = { workspace = true }

# Error handling
derive_more = { version = "2.0", features = ["from", "debug", "error"] }
thiserror = "2.0"

# Cryptography
zeroize = { version = "1" }
argon2 = "0.5"            # Password hashing (memory-hard)
chacha20poly1305 = "0.10" # Encrypted session data
sha2 = "0.10"             # SHA256 for PKCE
hmac = "0.12"             # TOTP, HMAC
rand = "0.8"              # Secure random generation

# Token formats
jwt-simple = "0.12"       # JWT support

# Encoding
base64 = "0.22"
url = "2.5"
urlencoding = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
time = "0.3"
chrono = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.5"

# Async
tokio = { version = "1", features = ["sync", "time"] }
async-trait = "0.1"

# HTTP client for OAuth flows
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tempfile = "3"

[lints]
workspace = true
