[package]
name = "foundation_codegen"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Build-time source scanning library for finding macro-annotated Rust items"
keywords = ["codegen", "source-scanning", "syn", "ast-parsing"]

[dependencies]
syn = { version = "2", features = ["full", "visit", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
walkdir = "2"
toml = { workspace = true }
serde = { version = "1", features = ["derive"] }
derive_more = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
