[package]
name = "foundation_core"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "central crate for all foundation crates for the ewe-platform project"
keywords = ["foundations_core", "ewe-platform-core"]

[dependencies]
derive_more = { version = "2.0", features = ["from", "debug", "error"] }
serde = { version = "1", features = ["derive"] }
concurrent-queue = { version = "2.5.0" }
toml_datetime = { version = "0.6.8" }
serde_json = { version = "1" }
serde_yml = { version = "0.0.12" }
toml = { version = "0.8.19" }
rust-embed = "8.5.0"
fastrand = "2.3.0"
rand = "0.9"
rand_chacha = "0.9"

async-trait = { version = "0.1.82" }
memchr = "2.7.2"
tracing = { version = "0.1.40" }
thiserror = { version = "2.0" }

spin = { version = "0.10" }
wasm_sync = { version = "0.1.2" }

url = "2.5"
regex = "1.11.1"
ctrlc = { version = "3.4" }
native-tls-crate = { package = "native-tls", version = "0.2.12", optional = true }

# optional deps
# -- tokio, axum and tower
tokio = { version = "1.36", features = ["sync", "time"], optional = true }

[dev-dependencies]
tracing-test = { version = "0.2.5" }
reqwest = { version = "0.12.9", features = ["blocking"] }

[features]
debug_trace = []
nightly = []

# features for tls via native-tls crate
native-tls = ["native-tls-crate"]
native-tls-vendored = ["native-tls", "native-tls-crate/vendored"]

# This feature switches the no threading runtime where you have
# specified control over when the Executor actually executes tasks
# allowing your calls to spawn to also call execution for submitted tasks.
#
# This feature enables usesful for WebAssembly and like environments
# where multi-threading is not supported (for the moment).
nothread_runtime = []

# This feature help enable tokio
tokio_runtime = ["dep:tokio"]

default = []


[lints]
workspace = true

