[package]
name = "foundation_db"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "central crate for all database"
keywords = ["foundations_core", "ewe-platform-core"]

[dependencies]

# -- Workspace dependencies

foundation_wasm = {workspace = true }
foundation_nostd = {workspace = true }


# -- Other dependencies
derive_more = { version = "2.0", features = ["from", "debug", "error"] }
serde = { version = "1", features = ["derive"] }
concurrent-queue = { version = "2.5.0" }
toml_datetime = { version = "0.7" }
serde_json = { version = "1" }
serde_yml = { version = "0.0.12" }
toml = { version = "0.9" }
fastrand = "2.3.0"
rand = "0.9"
rand_chacha = "0.9"

memchr = "2.7.4"
tracing = { version = "0.1.41" }
thiserror = { version = "2.0" }

url = "2.5"
regex = "1.12.2"
ctrlc = { version = "3.4" }
base64 = "0.22"
sha1 = "0.10"
bytes = "1.5"

# optional
zeroize = { version = "1", optional = true }
native-tls = { version = "0.2", optional = true }

# Compression dependencies
flate2 = { version = "1.0", optional = true }
brotli = { version = "6.0", optional = true }

[dev-dependencies]
serial_test = { workspace = true }
tracing-test = { version = "0.2",  features = ["no-env-filter"] }
reqwest = { version = "0.12.15", features = ["blocking"] }

[features]

# Compression features
compression = ["flate2", "brotli"]
gzip = ["flate2"]
deflate = ["flate2"]


[lints]
workspace = true
