[package]
name = "foundation_db"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified storage backend with Turso sync API, D1, R2, and in-memory fallback"
keywords = ["database", "storage", "turso", "foundation"]

[dependencies]
# -- Workspace dependencies
foundation_core = { workspace = true }

# Storage backends
turso = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
derive_more = { version = "2.0", features = ["from", "error", "display"] }

# Security
zeroize = { version = "1.8", features = ["derive"] }
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Utilities
tracing = "0.1"

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tempfile = "3"

[features]
default = []
d1 = []
r2 = []

[lints]
workspace = true
