[package]
name = "foundation_db"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified storage backend with Turso sync API, D1, R2, and in-memory fallback"
keywords = ["database", "storage", "turso", "foundation"]

[dependencies]
# -- Workspace dependencies
# Multi-threaded support is optional - enable with `multi` feature
foundation_core = { workspace = true, features = ["std"] }

# Storage backends (feature-gated)
turso = { version = "0.1", optional = true }
libsql = { version = "0.6", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
derive_more = { version = "2.0", features = ["from", "error", "display"] }

# Security
zeroize = { version = "1.8", features = ["derive"] }
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Hashing
sha2 = "0.10"
chrono = { workspace = true }

# Utilities
tracing = "0.1"
futures-core = "0.3"
futures-lite = "2"

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tempfile = "3"

[features]
default = ["turso"]
turso = ["dep:turso"]
libsql = ["dep:libsql"]
d1 = []
r2 = []

# Multi-threaded support - enables foundation_core's multi feature
multi = ["foundation_core/multi"]

[lints]
workspace = true
