[package]
name = "foundation_deployment"
version = "0.0.1"
description = "Foundation deployment providers for multi-cloud deployments"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["ewe-platform", "deployment", "cloud", "infrastructure"]

[dependencies]
# -- workspace dependencies
foundation_core = { workspace = true, features = ["ssl", "multi"] }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# -- http client - use foundation_core's SimpleHttpClient

# -- config parsing
toml = "0.8"
serde_yaml = "0.9"

# -- file system utilities (for spec fetcher)
walkdir = "2.5"


[features]
default = []

[lints]
workspace = true
